# cfrcat

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/cfrcat/: cfrcat.hpp  options.hpp
